--- a/business_map.html
+++ b/business_map.html
@@ -92,18 +92,28 @@
             .each(transform)            
             .attr("class", "marker");
 
+        // Scaley stuff
+        var scale = d3.scale.linear()
+                            .domain([0, d3.max(dataset, function(d){return d.review_count;})])
+                            .range([3,15]);
+
         // Add a circle.
         marker.append("svg:circle")
-            .attr("r", 4.5)
+            .attr("r", function(d){return scale(d.review_count);})
             .attr("cx", padding)
             .attr("cy", padding)
-
-        // Add a label.
-        marker.append("svg:text")
-            .attr("x", padding + 7)
-            .attr("y", padding)
-            .attr("dy", ".31em")
-            .text(function(d) { return d.name; });
+            .style("fill-opacity", .5)
+	          .style("fill", function(d){
+	    	      if (d.stars >= 4){
+			            return "red";
+          		}
+          		else if(d.stars >= 3){
+          			return "brown";
+          		}
+          		else{
+          			return "black";
+          		}
+          	});
 
         function transform(d) {
           d = new google.maps.LatLng(d.latitude, d.longitude);
