--- a/business_map.html
+++ b/business_map.html
@@ -108,6 +108,7 @@
               }else{
               }
                 })
+            .attr("fill-opacity", 0.75)
 
         // Add a label.
         marker.append("svg:text")
