--- a/business_map.html
+++ b/business_map.html
@@ -38,7 +38,7 @@
       }
 
       .markers circle {
-        fill: brown;
+        /*fill: brown;*/
         stroke: black;
         stroke-width: 1.5px;
       }
@@ -97,6 +97,11 @@
             .attr("r", 4.5)
             .attr("cx", padding)
             .attr("cy", padding)
+            .attr("fill", function(d) {
+            if(d.stars >=4) return "red";
+            if(d.stars == 3) return "brown";
+            if(d.stars < 3) return "black";
+             });
 
         // Add a label.
         marker.append("svg:text")
