--- a/business_map.html
+++ b/business_map.html
@@ -31,14 +31,11 @@
       }
 
       .markers svg {
-        width: 60px;
-        height: 20px;
         padding-right: 100px;
         font: 10px sans-serif;        
       }
 
       .markers circle {
-        fill: brown;
         stroke: black;
         stroke-width: 1.5px;
       }
@@ -70,6 +67,14 @@
         mapTypeId: google.maps.MapTypeId.TERRAIN
       });
 
+      var linScale = d3.scale.linear()
+          .domain([ 
+            4500,0
+            //d3.min(dataset.review_count, function(d) { return d[0]; }), 
+            //d3.max(dataset.review_count, function(d) { return d[0]; }) 
+            ])
+          .range([3,15]);
+
       // Create an overlay
       var overlay = new google.maps.OverlayView();
 
@@ -94,23 +99,28 @@
 
         // Add a circle.
         marker.append("svg:circle")
-            .attr("r", 4.5)
+            .attr("r", function(d) {
+              return linScale(d.review_count);
+            })
             .attr("cx", padding)
             .attr("cy", padding)
-
-        // Add a label.
-        marker.append("svg:text")
-            .attr("x", padding + 7)
-            .attr("y", padding)
-            .attr("dy", ".31em")
-            .text(function(d) { return d.name; });
+            .attr("style", function(d) {
+              if( d.stars > 4 ) {
+                return "fill:red;";
+              } else if( d.stars > 3 ) {
+                return "fill:brown;";
+              } else {
+                return "fill:black;";
+              }
+            })
+            .attr("fill-opacity", 0.5);
 
         function transform(d) {
           d = new google.maps.LatLng(d.latitude, d.longitude);
           d = projection.fromLatLngToDivPixel(d);
           return d3.select(this)
-              .style("left", (d.x - padding) + "px")
-              .style("top", (d.y - padding) + "px");
+              .style("left", (d.x + padding) + "px")
+              .style("top", (d.y + padding) + "px");
         }
       };
     };
